style: fixes style on mobile and checkout page

--- a/components/cart/Cart/Cart.module.css
+++ b/components/cart/Cart/Cart.module.css
@@ -47,8 +47,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
-  width: 50%;
   margin: auto;
 }
 
